<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFEBEB"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/buttonInsert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Email"
        android:text="@string/buttoninsert" />

    <Button
        android:id="@+id/goto2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonInsert"
        android:text="@string/goto2" />

    <Button
        android:id="@+id/goto3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/goto2"
        android:text="@string/goto3" />

    <EditText
        android:id="@+id/id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        android:text="@string/id" />

    <EditText
        android:id="@+id/Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/id"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Name"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress" />
</RelativeLayout>